hphp/test/zend/good/ext/gd/tests/imagepolygon_negative.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('imagepolygon')) die('skip imagepolygon() not available');
}
