hphp/test/zend/bad/ext/gd/tests/imagepolygon_basic.php.skipif
<?php 
	if (!function_exists('imagepolygon')) die('skip imagepolygon() not available'); 
	require_once('skipif_imagetype.inc');
?>